[package]
name = "mailme"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-beta1"
tokio = { version = "0.3.1", features = ["io-util", "io-std", "net", "rt", "rt-multi-thread"] }
tokio-rustls = "0.20.0"
thiserror = "1.0.21"
webpki-roots = "0.20"
log = "0.4.11"


[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
